[fix] Fixing a absolute positioning issue on iOS

--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -16,6 +16,7 @@
 
     .navigation__inner {
       position:absolute;
+      left:0;
     }
 
     .navigation__link:hover,
